--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: AEM Deployment
 
 on:
   push:
-    branches: main
+    branches: [ main ]  # Adjust the branch to trigger the deployment
 
 jobs:
   deploy:
@@ -11,18 +11,21 @@ jobs:
       - uses: actions/checkout@v3  # Checkout your repository code
 
       - name: Download AEM package (optional)
-       
-         uses: actions/download-artifact@v3
-         with:
-           name: aem-package.zip
-           path: .
+        # Uncomment if your package isn't already in the repository:
+        uses: actions/download-artifact@v3
+        with:
+          name: aem-package.zip
+          path: .
 
       - name: Upload AEM package
         run: |
           curl -u ${{ secrets.AEM_CREDENTIALS }} \
             -F cmd=upload \
             -F force=true \
-            -F package=@we.retail.community.apps-1.11.84.zip \
-            http://<your_aem_host>:4502/crx/packmgr/service/.json
+            -F package=@${{ secrets.AEM_PACKAGE_NAME }} \
+            http://${{ secrets.AEM_HOST }}:4502/crx/packmgr/service/.json
         env:
-          AEM_HOST: ${{ secrets.AEM_HOST }}  # Add a secret for AEM host
+          AEM_CREDENTIALS: ${{ secrets.AEM_CREDENTIALS }}
+          AEM_HOST: ${{ secrets.AEM_HOST }}
+          AEM_PACKAGE_NAME: "we.retail.community.apps-1.11.84.zip" 
+
