--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         # Uncomment if your package isn't already in the repository:
         uses: actions/download-artifact@v3
         with:
-          name: ${{ AEM_PACKAGE_NAME }}
+          name: ${{ env.AEM_PACKAGE_NAME }}
           path: .
 
       - name: Upload AEM package
@@ -22,7 +22,7 @@ jobs:
           curl -u ${{ secrets.AEM_CREDENTIALS }} \
             -F cmd=upload \
             -F force=true \
-            -F package=@${{ AEM_PACKAGE_NAME }} \
+            -F package=@${{ env.AEM_PACKAGE_NAME }} \
             http://${{ secrets.AEM_HOST }}:4502/crx/packmgr/service/.json
         env:
           AEM_CREDENTIALS: ${{ secrets.AEM_CREDENTIALS }}
