--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]  # Adjust the branch to trigger the deployment
 
 jobs:
-  deploy:
+  Get-Package:
     runs-on: aem  # Adjust the runner OS if needed
     steps:
       #- uses: actions/checkout@v3  # Checkout your repository code
@@ -18,7 +18,9 @@ jobs:
         run: |
           echo "Downloaded file hash:"
           shasum -a 256 ${GITHUB_WORKSPACE}/git-0.6.tar.gz
-
+  Upload-Package:
+    runs-on: aem  # Adjust the runner OS if needed
+    steps:
       - name: Upload AEM package
         run: |
           curl -u ${{ secrets.AEM_CREDENTIALS }} \
