--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: AEM Deployment Workflow
 
 on:
   push:
-    branches: [ main ]  # Adjust the branch to trigger the deployment
+    branches: [ main ] 
 
 jobs:
   Get-Package:
