--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,48 +2,38 @@ name: AEM Deployment Workflow
 
 on:
   push:
-    branches: [ main ] 
+    branches: [ main ]
 
 jobs:
   Get-Package:
     runs-on: aem  # Adjust the runner OS if needed
     steps:
-      #- uses: actions/checkout@v3  # Checkout your repository code
+      # ... existing steps for downloading git ...
 
-      - name: Download git-0.6.tar.gz
-        run: |
-          curl -L https://mirrors.edge.kernel.org/pub/software/scm/git/git-0.6.tar.gz -o git-0.6.tar.gz
-
-      - name: Verify Download (Optional)
-        run: |
-          echo "Downloaded file hash:"
-          shasum -a 256 ${GITHUB_WORKSPACE}/git-0.6.tar.gz
   Upload-Package:
-   runs-on: aem  # Adjust the runner OS if needed
-   steps:
-    - name: Checkout code (if needed)
-      uses: actions/checkout@v3
+    runs-on: aem  # Adjust the runner OS if needed
+    steps:
+      - name: Checkout code (if needed)
+        uses: actions/checkout@v3
 
-    - name: Get server address
-      run: |
-        read -p "Enter AEM server address (dev, stage, or prod): " server_address
+      - name: Get server address
+        run: |
+          echo "Select server environment (dev, stage, or prod):"
+          read server_address
 
-    - name: Upload AEM package (conditional)
-      run: |
-        if [[ "$server_address" == "dev" ]]; then
-          aem_host=${{ env.AEM_DEV_HOST }}
-        elif [[ "$server_address" == "stage" ]]; then
-          aem_host=${{ env.AEM_STAGE_HOST }}
-        elif [[ "$server_address" == "prod" ]]; then
-          aem_host=${{ env.AEM_STAGE_HOST }}  # Change to prod host if needed
-        else
-          echo "Invalid server address!"
-          exit 1
-        fi
+          if [[ "$server_address" == "dev" ]]; then
+            aem_host=${{ env.AEM_DEV_HOST }}
+          elif [[ "$server_address" == "stage" ]]; then
+            aem_host=${{ env.AEM_STAGE_HOST }}
+          else
+            echo "Invalid server address!"
+            exit 1
+          fi
 
-        curl -u ${{ secrets.AEM_CREDENTIALS }} \
-          -F cmd=upload \
-          -F force=true \
-          -F package=@${{ env.AEM_PACKAGE_NAME }} \
-          http://$aem_host:4502/crx/packmgr/service/.json
-
+      - name: Upload AEM package (conditional)
+        run: |
+          curl -u ${{ secrets.AEM_CREDENTIALS }} \
+            -F cmd=upload \
+            -F force=true \
+            -F package=@${{ env.AEM_PACKAGE_NAME }} \
+            http://$aem_host:4502/crx/packmgr/service/.json
