--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,14 @@ jobs:
   Get-Package:
     runs-on: aem  # Adjust the runner OS if needed
     steps:
-      # ... existing steps for downloading git ...
+       - name: Download git-0.6.tar.gz
+         run: |
+          curl -L https://mirrors.edge.kernel.org/pub/software/scm/git/git-0.6.tar.gz -o git-0.6.tar.gz
+
+       - name: Verify Download (Optional)
+         run: |
+          echo "Downloaded file hash:"
+          shasum -a 256 ${GITHUB_WORKSPACE}/git-0.6.tar.gz
 
   Upload-Package:
     runs-on: aem  # Adjust the runner OS if needed
