--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,9 +30,8 @@ jobs:
 
       - name: Trigger Common Repository Workflow
         if: steps.validate.outputs.environment
-        run: |
-          curl -X POST \
-            -H "Accept: application/vnd.github.everest-preview+json" \
-            -H "Content-Type: application/json" \
-            -d '{"event_type": "deploy-environment", "client_payload": {"environment": "${{ steps.validate.outputs.environment }}"}}' \
-            https://api.github.com/repos/Faazil/common/dispatches
+        uses: peter-evans/repository-dispatch@v1
+        with:
+          repository: Faazil/common
+          event-type: deploy-environment
+          client-payload: '{"environment": "${{ steps.validate.outputs.environment }}"}'
