--- a/.github/workflows/vars_resue.yaml
+++ b/.github/workflows/vars_resue.yaml
@@ -34,7 +34,7 @@ jobs:
         response=$(curl -u $AEM_CREDENTIALS \
           -F cmd=upload \
           -F force=true \
-          -F package=@$AEM_PACKAGE_NAME \
+          -F package=@${{ env.AEM_PACKAGE_NAME }} \
           http://$AEM_HOST:4502/crx/packmgr/service/.json)
         echo "$response" > response.json
 
