--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       environment:
         description: 'Select environment'
         required: true
-        default: '1test'
+        default: '1loc'
 
 jobs:
   validate-and-trigger:
