--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -11,6 +11,9 @@ on:
 jobs:
   validate-and-deploy:
     runs-on: rhel88
+    outputs:
+      aem_host: ${{ steps.extract_url.outputs.AEM_HOST }}
+      aem_package_name: ${{ steps.set_package_name.outputs.AEM_PACKAGE_NAME }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -43,6 +46,7 @@ jobs:
             exit 1
           fi
           echo "AEM_HOST=$url" >> $GITHUB_ENV
+          echo "::set-output name=AEM_HOST::$url"
 
       - name: Check variable
         run: echo $AEM_HOST
@@ -54,13 +58,14 @@ jobs:
           path: we.retail.community.apps-1.11.84.zip
 
       - name: Set AEM_PACKAGE_NAME environment variable
-        run: echo "AEM_PACKAGE_NAME=we.retail.community.apps-1.11.84.zip" >> $GITHUB_ENV
+        id: set_package_name
+        run: echo "::set-output name=AEM_PACKAGE_NAME::we.retail.community.apps-1.11.84.zip"
 
   upload-aem-package:
     needs: validate-and-deploy
     uses: Faazil/common/.github/workflows/deployment.yaml@main
     with:
-      AEM_PACKAGE_NAME: ${{ env.AEM_PACKAGE_NAME }}
-      AEM_HOST: ${{ env.AEM_HOST }}
+      AEM_PACKAGE_NAME: ${{ needs.validate-and-deploy.outputs.aem_package_name }}
+      AEM_HOST: ${{ needs.validate-and-deploy.outputs.aem_host }}
     secrets:
       AEM_CREDENTIALS: ${{ secrets.AEM_CREDENTIALS }}
