--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -61,7 +61,7 @@ jobs:
   upload-aem-package:
     needs: validate-and-deploy
     uses: Faazil/common/.github/workflows/deployment.yaml@main  # Assuming this points to your reusable workflow location
-    with:
-      AEM_CREDENTIALS: ${{ secrets.AEM_CREDENTIALS }}
-      AEM_PACKAGE_NAME: we.retail.community.apps-1.11.84.zip
-      AEM_HOST: ${{ needs.validate-and-deploy.outputs.AEM_HOST }}
+    #with:
+      #AEM_CREDENTIALS: ${{ secrets.AEM_CREDENTIALS }}
+      #AEM_PACKAGE_NAME: we.retail.community.apps-1.11.84.zip
+      #AEM_HOST: ${{ needs.validate-and-deploy.outputs.AEM_HOST }}
