--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -13,6 +13,8 @@ jobs:
     runs-on: rhel888
     outputs:
       AEM_HOST: ${{ steps.extract_url.outputs.AEM_HOST }}
+      AEM_CREDENTIALS: ${{ steps.set-credentials.outputs.AEM_CREDENTIALS }}
+      AEM_PACKAGE_NAME: ${{ steps.set-package-name.outputs.AEM_PACKAGE_NAME }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -49,6 +51,17 @@ jobs:
           echo "AEM_HOST=$url" >> $GITHUB_ENV
           echo "::set-output name=AEM_HOST::$url"
 
+      - name: Set AEM Credentials
+        id: set-credentials
+        run: |
+          echo "::set-output name=AEM_CREDENTIALS::${{ secrets.AEM_CREDENTIALS }}"
+
+      - name: Set AEM Package Name
+        id: set-package-name
+        run: |
+          PACKAGE_NAME='we.retail.community.apps-1.11.84.zip'
+          echo "::set-output name=AEM_PACKAGE_NAME::$PACKAGE_NAME"
+
       - name: Check variable
         run: echo $AEM_HOST
 
@@ -61,7 +74,8 @@ jobs:
   upload-aem-package:
     needs: validate-and-deploy
     uses: Faazil/common/.github/workflows/deployment.yaml@main  # Assuming this points to your reusable workflow location
-    #with:
-      #AEM_CREDENTIALS: ${{ secrets.AEM_CREDENTIALS }}
-      #AEM_PACKAGE_NAME: we.retail.community.apps-1.11.84.zip
-      #AEM_HOST: ${{ needs.validate-and-deploy.outputs.AEM_HOST }}
+    with:
+      AEM_CREDENTIALS: ${{ needs.validate-and-deploy.outputs.AEM_CREDENTIALS }}
+      AEM_PACKAGE_NAME: ${{ needs.validate-and-deploy.outputs.AEM_PACKAGE_NAME }}
+    secrets:
+      AEM_CREDENTIALS: ${{ secrets.AEM_CREDENTIALS }}
