--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -70,7 +70,7 @@ jobs:
 
   upload-aem-package:
     needs: validate-and-deploy
-    uses: Faazil/common/.github/workflows/deployment.yaml@main  # Assuming this points to your reusable workflow location
+    uses: Faazil/Common/.github/workflows/deployment.yaml@main  # Assuming this points to your reusable workflow location
     with:
       AEM_CREDENTIALS: ${{ needs.validate-and-deploy.outputs.AEM_CREDENTIALS }}
       AEM_PACKAGE_NAME: ${{ needs.validate-and-deploy.outputs.AEM_PACKAGE_NAME }}
